# llm-notebook

./: LICENSE  README.md  index.html  package.json  test_pt_br.txt
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: embeds.rs  llama.rs  mod.rs
src-tauri/src/db/: attachments.rs  chat.rs  db_manager.rs  embeddings.rs  mod.rs  notebooks.rs
src-tauri/src/db/migrations/: 01_create_notebooks_table.sql  02_create_chat_entry_table.sql  03_create_attachments_table.sql  04_alter_table_attachments_table.sql
src-tauri/src/llm/: llama.rs
src/components/layouts/: app-layout.tsx  app.css
src/components/notebook/: chat-input.tsx  chat-message.tsx  file-sidebar.tsx
src/components/notebooks/: grid.tsx
src/components/toast/: container.tsx
src/lib/: commands.ts  toast.ts  utils.ts
src/routes/: home.tsx  notebook.tsx
