[package]
name = "llm-notebook"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "llm_notebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = "0.3.3"

anyhow = "1.0.101"
futures = "0.3.31"

arrow-array = "57.3.0"
arrow-schema = "57.3.0"
fastembed = "5.8.1"
lancedb = "0.26.1"
pdf-extract = "0.10.0"
uuid = {version="1.20.0", features= ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
